# docdiff

./: .brainstorm_palette.html  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/agent/: compare_graph.py  ingest_graph.py  qa_graph.py  states.py
app/config/: crypto.py  settings.py
app/core/: types.py  utils.py
app/db/: chunk_repo.py  compare_repo.py  document_repo.py  faiss_store.py  schema.py
app/services/: backup_service.py  compare_service.py  ingest_service.py  qa_service.py  report_service.py  update_checker.py
app/ui/: app_context.py  main_window.py  theme.py  theme_manager.py
assets/: diff_template.html
tests/: test_config.py  test_types.py  test_types_page_no_removed.py
tests/test_agent/: test_compare_graph.py  test_ingest_graph.py  test_qa_graph.py  test_qa_stream.py
tests/test_db/: test_chunk_repo.py  test_compare_repo.py  test_document_repo.py  test_faiss_store.py  test_schema.py
tests/test_diff/: test_diff_classifier.py  test_engine.py  test_semantic_matcher.py  test_structure_aligner.py
tests/test_model/: test_lc_factory.py  test_local_embedding.py  test_openai_provider.py
tests/test_parser/: test_docx_extractor.py  test_ir_builder.py  test_markitdown_adapter.py  test_ocr_interface.py  test_pymupdf_extractor.py  test_router.py
tests/test_retrieval/: test_bm25_searcher.py  test_hybrid_search.py  test_indexer.py  test_searcher.py
tests/test_services/: test_backup_service.py  test_compare_service.py  test_ingest_service.py  test_qa_service.py  test_report_service.py  test_update_checker.py
(+35 files in other folders)
